--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "angular-animate": "^1.6.3",
     "angular-aria": "^1.6.3",
     "angular-material": "^1.1.3",
-    "angular-messages": "^1.6.3"
+    "angular-messages": "^1.6.3",
+    "jshint": "^2.9.4"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
