--- a/package.json
+++ b/package.json
@@ -1,37 +1,34 @@
 {
-  "name": "todolist",
+  "name": "todo-list-angularjs",
   "version": "1.0.0",
-  "description": "criacao de todo list com angular para estudo",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yoshidf/todo-list-angularjs.git"
+  },
   "author": "Francisco",
   "license": "ISC",
-  "dependencies": {
-    "angular": "^1.6.3",
-    "angular-animate": "^1.6.3",
-    "angular-aria": "^1.6.3",
-    "angular-material": "^1.1.3",
-    "angular-messages": "^1.6.3",
-    "jshint": "^2.9.4"
+  "bugs": {
+    "url": "https://github.com/yoshidf/todo-list-angularjs/issues"
   },
+  "homepage": "https://github.com/yoshidf/todo-list-angularjs#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-concat-vendor": "0.0.4",
     "gulp-connect": "^5.0.0",
-    "gulp-imagemin": "^3.2.0",
-    "gulp-jshint": "^2.0.4",
-    "gulp-less": "^3.3.0",
-    "gulp-less-dependents": "^1.1.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-ng-annotate": "^2.0.0",
-    "gulp-sourcemaps": "^2.5.0",
-    "gulp-uglify": "^2.1.2",
-    "gulp-watch": "^4.3.11",
-    "http-server": "^0.9.0"
+    "gulp-uglify": "^2.1.2"
+  },
+  "dependencies": {
+    "angular": "^1.6.4",
+    "angular-animate": "^1.6.4",
+    "angular-aria": "^1.6.4",
+    "angular-material": "^1.1.3",
+    "angular-messages": "^1.6.4",
+    "font-awesome": "^4.7.0"
   }
 }
